Wörter können nun hinzugefügt und angezeigt werden
Man kann jetzt Wörter hinzufügen. Diese werden in einer ArrayList in
jeder Unit gespeichert. Mit dem "Weiter"-Button kann man sich die
Übersetzung bzw. das nächste Wort anzeigen lassen. Außerdem kann man mit
den 4 farbigen Buttons die "knowledge" festlegen (default auf 0 (Rot)).
Die knowledge legt fest wie wahrscheinlich ein Wort drankommt:
0 (Rot): 100%
1 (Orange): 80%
2 (Hellgrün): 50%
3 (Dunkelgrün): 20%

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -22,4 +22,13 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Wörterliste"
+        android:textSize="22sp"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:background="@drawable/border_item_bottom"/>
+
 </LinearLayout>
