--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageView"
@@ -14,7 +13,5 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="-20dp"
         android:src="@drawable/logo" />
-
-
 
 </LinearLayout>
