--- a/app/src/main/res/layout/activity_unitwordlist.xml
+++ b/app/src/main/res/layout/activity_unitwordlist.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,32 +20,18 @@
 
 
         </android.support.v7.widget.Toolbar>
-
     </android.support.design.widget.AppBarLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/border_item_bottom"
-        android:onClick="wordlistClick"
-        android:clickable="true"
-        android:id="@+id/hurensohntest">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:text="Wörterliste"
-            android:textSize="20sp"
-            android:gravity="center_vertical"
-            android:paddingLeft="5dp"
-            />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_keyboard_arrow_right_24dp"
-            android:paddingRight="10dp"
-            />
-    </LinearLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/wordListLayout">
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
