--- a/app/src/main/res/layout/unitlistelement.xml
+++ b/app/src/main/res/layout/unitlistelement.xml
@@ -13,6 +13,8 @@
         android:textSize="20sp"
         android:gravity="center_vertical"
         android:paddingLeft="5dp"
+        android:singleLine="true"
+        android:ellipsize="end"
         />
     <ImageView
         android:layout_width="wrap_content"
