Farbe der Statusbar, Wörteranzeige scrollbar, schönere Trennlinien, bessere Speicherung
Die Statusbar hat jetzt auf Android Lollipop(5.0) und aufwärts genau den
selben Blauton wie die Action Bar. Außerdem sind die Trennlinien
zwischen den einzelnen Elementen in den Listen nicht mehr 1dp sondern
1px breit. Noch dazu sind sie ein wenig heller. Falls irgendwer auf die
Idee kommen sollte ein übertrieben langes Wort zu speichern, kann man
die TextViews für die Vokabeln jetzt auch scrollen. Der
"Auswerten"-Button wurde aus Platztechnischen Gründen entfernt und soll
in die Einstellungen umgelagert werden. Und als letztes wird die Datei
mit allen Wörtern jetzt auch neu gespeichert wenn der User ein Wort
löscht oder bearbeitet. Vorher konnte man Wörter bearbeiten und die App
direkt schließen ohne dass die Änderungen gespeichert wurden. Dies ist
nun nicht mehr der Fall.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -29,7 +29,7 @@
         android:background="@drawable/border_item_bottom"
         android:onClick="wordlistClick"
         android:clickable="true"
-        android:id="@+id/hurensohntest">
+        android:id="@+id/settingslist">
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
