--- a/app/src/main/res/drawable/border_item_bottom.xml
+++ b/app/src/main/res/drawable/border_item_bottom.xml
@@ -7,8 +7,8 @@
         android:top="-2dp">
         <shape android:shape="rectangle" >
             <stroke
-                android:width="1dp"
-                android:color="#737373" />
+                android:width="1px"
+                android:color="#bbbbbb" />
         </shape>
     </item>
 
