Abstände richtig, man kann die Wortwiederholung anpassen
Die App passt sich jetzt wirklich an alle Bildschirmgrößen an, e gibt
jetzt in den Einstellungen eine Möglichkeit die Wortwiederholung
anzupassen. Die Speicherung davon ist noch nicht fertig programmiert.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#5482a1</color>
-    <color name="colorPrimaryDark">#5482a1</color>
+    <color name="colorPrimaryDark">#435e70</color>
     <color name="colorAccent">#5482a1</color>
     <color name="colorRed">#b54141</color>
     <color name="colorOrange">#c98c34</color>
