Wortwiederholungen können geändert werden
Man kann jetzt in den Einstellungen die Wortwiederholungen ändern. Diese
sind seperat für 11-20, 21-30 und 31+ Wörter einstellbar, werden in
einer Datei abgespeichert und beim Start der App eingelesen.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/border_item_bottom"
-        android:onClick="repititionClick"
+        android:onClick="repetitionClick"
         android:clickable="true"
         android:id="@+id/repitition">
         <TextView
