Zuerst gefragtes Wort ändern
Man kann jetzt in den einstellen welches Wort zuerst gezeigt werden
soll, also ob man mithilfe der Übersetzung das Fremdwort lernen möchte
oder ungekehrt. Falls man beide auswählt, wird immer zufällig gewählt
welches Wort zuerst angezeigt wird. Das ganze wird natürlich in auch in
einer (zwei) Dateien abgespeichert.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -93,6 +93,29 @@
             android:paddingRight="10dp"
             />
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/border_item_bottom"
+        android:onClick="askWordsClick"
+        android:clickable="true"
+        android:id="@+id/askWords">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="@string/askedWords"
+            android:textSize="20sp"
+            android:gravity="center_vertical"
+            android:paddingLeft="5dp"
+            />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_keyboard_arrow_right_24dp"
+            android:paddingRight="10dp"
+            />
+    </LinearLayout>
 
 </LinearLayout>
