--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -45,7 +45,7 @@
             android:paddingRight="10dp"
             />
     </LinearLayout>
-    <LinearLayout
+    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -68,7 +68,7 @@
             android:src="@drawable/ic_keyboard_arrow_right_24dp"
             android:paddingRight="10dp"
             />
-    </LinearLayout>
+    </LinearLayout> -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
